fixed issue with login button border on small screens

--- a/website/static/css/base.css
+++ b/website/static/css/base.css
@@ -221,7 +221,7 @@ footer {
 #sidebar-login-link {
     display: none;
     @media (max-width:600px) {
-        display: block;
+        display: flex;
     }
 }
 
